# GPU-LMFit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1
docs/: structure.md
examples/CPU/: CMakeLists.txt  Gauss_1D.cpp  Gauss_1D.py
include/: forward_difference.h  forward_difference.hpp  lm_solver.cpp  lm_solver.h  lm_solver.hpp  models.h  models.hpp  types.h  types.hpp  utils.h  utils.hpp
package/cpu_lmfit/: setup.py
src/: kernels.cu  kernels.cuh
src/binding/: CMakeLists.txt  binding.cpp  binding_cpu.cpp
src/cpu/: CMakeLists.txt  lm_solver.cpp
src/gpu/: estimators.cuh  lm_solver.cu  models.cuh
tests/: test.cu
tests/package_test/: run_test.sh
